Fixed z-index of footer. Fixed Margin for lists

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -10,6 +10,7 @@
   height: 45px;
   background-color: $black;
   color: $white;
+  z-index: 2;
 }
 
 .Footer .active {
